--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,10 @@ button.primary {
   background-color: var(--green);
   color: white;
 }
+button.secondary {
+  background-color: red;
+  color: white;
+}
 
 .app {
   margin: 0 auto;
